# claude-code-dashboard-demo

lesson7_files/: .gitignore  EDA.ipynb  EDA_Refactored.ipynb  README.md  README_Dashboard.md  business_metrics.py  dashboard.py  dashboard_utils.py  data_loader.py  prompt.md  pyproject.toml
